// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Nav Allineamento 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <ul
        className="justify-content-center mb-3 nav"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
      <ul
        className="justify-content-end mb-3 nav"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
      <ul
        className="nav flex-column"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Allineamento.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Nav Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <ul
        className="mb-3 nav"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
      <ul
        className="nav nav-pills"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="#"
            onClick={[Function]}
          >
            Active
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="#"
            onClick={[Function]}
          >
            Link
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="#"
            onClick={[Function]}
          >
            Link
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link disabled"
            disabled={true}
            href="#"
            onClick={[Function]}
          >
            Disabled
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Nav Esempi interattivi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="nav"
    >
      <a
        className="nav-link"
        disabled={false}
        href="#"
        onClick={[Function]}
      >
        Link 
        
         
        
         
        
         
        
      </a>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "EsempiInterattivi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Nav Menù a bottoni 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="nav nav-pills"
    >
      <a
        className="nav-link active"
        href="#"
        onClick={[Function]}
      >
        Link Attivo
      </a>
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
      >
        Link
      </a>
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
      >
        Link
      </a>
      <a
        className="nav-link disabled"
        disabled={true}
        href="#"
        onClick={[Function]}
      >
        Link Disabilitato
      </a>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "MenuBottoni.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Nav Menù a tab 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <ul
      className="nav nav-tabs"
    >
      <a
        className="nav-link active"
        href="#"
        onClick={[Function]}
      >
        Link Attivo
      </a>
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
      >
        Link
      </a>
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
      >
        Link
      </a>
      <a
        className="nav-link disabled"
        disabled={true}
        href="#"
        onClick={[Function]}
      >
        Link Disabilitato
      </a>
    </ul>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "MenuTab.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Nav “fill” e “justify” 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <ul
        className="mb-3 nav nav-pills nav-fill"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link con molto testo Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link con molto testo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
      <ul
        className="nav nav-pills nav-justified"
      >
        <a
          className="nav-link active"
          href="#"
          onClick={[Function]}
        >
          Link con molto testo Attivo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link con molto testo
        </a>
        <a
          className="nav-link"
          href="#"
          onClick={[Function]}
        >
          Link
        </a>
        <a
          className="nav-link disabled"
          disabled={true}
          href="#"
          onClick={[Function]}
        >
          Link Disabilitato
        </a>
      </ul>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "FillJustify.md",
      }
    }
  />
</div>
`;
